chore: add spacing to prevent footer from hiding content

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14,3 +14,6 @@ nav {
   height: 18vw;
   object-fit: cover;
 }
+.mb-footer {
+  margin-bottom: 4.5rem !important;
+}
